# AGentSweeps

./: .gitignore  README.md  install.ps1  install.sh  release.mjs  setup.bat  setup.ps1
.github/workflows/: pages.yml  publish.yml
New folder/.devcontainer/: devcontainer.json
agent-sweeps-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  package.json
agent-sweeps-vscode/src/: extension.ts
agent-sweeps-vscode/src/commands/: aiCommands.ts  diskCommands.ts  diskUtils.ts  loggerCommands.ts  settingsCommands.ts
agent-sweeps-vscode/src/webview/: webviewContent.ts
cleanup-agent/: index.html  package-lock.json  package.json
cleanup-agent/docs/: agentic-chat-runtime-map.md  backend-command-runtime-map.md  current-system-map.md  design-system-ownership-map.md  documentation-lock-summary.md  frontend-state-ownership-map.md  gate-baselines.md  open-debt-register.md  system-build-history.md
cleanup-agent/src/: App.css  App.jsx  api.js  constants.js  index.css
cleanup-agent/src-tauri/: Cargo.toml  tauri.conf.json
cleanup-agent/src-tauri/icons/: icon.icns
cleanup-agent/src-tauri/src/: lib.rs  main.rs
cleanup-agent/src-tauri/src/commands/: ai.rs  backup.rs  cleanup.rs  decision.rs  deep_scan.rs  drive_detail.rs  mod.rs  scan.rs  scheduler.rs  settings.rs  setup.rs  system.rs
cleanup-agent/src-tauri/src/commands/deep_scan/: classify.rs  clean.rs  mod.rs  scan.rs  types.rs  zones.rs
cleanup-agent/src-tauri/src/utils/: disk.rs  logger.rs  mod.rs
cleanup-agent/src/components/: DriveModal.jsx  SetupModal.jsx
cleanup-agent/src/hooks/: useChat.js  (+5 more)
docs/: index.html
(+80 files in other folders)
