[package]
name = "dev-cleanup-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "dev_cleanup_agent_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "dev-cleanup-agent"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
zip = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
